brat/test/golden/error/kbadvec.brat.golden
Error in test/golden/error/kbadvec.brat@FC {start = Pos {line = 2, col = 18}, end = Pos {line = 2, col = 19}}:
triple = { b => [b] }
                 ^

  Expected vector of length 3
from the type:  Vec(Bit, 3)
but got vector: [「b」]
of length 1


